# ptsnet

./: .gitignore  .travis.yml  MANIFEST.in  MOC.c  MOC.py  README.md  TODOS  a.out  base  files.txt  genbase.c  headers.h  makefile  mesh.py  meta.yaml  requirements.txt  results_far  setup.cfg  setup.py  simulation.py  temp.inp  temp.rpt  ter temp  test.py  test.py.save  test_hammer_sim.py  test_parallel.py  test_parallel.py.save  test_tacc.py  todo.txt  vector.c
.ipynb_checkpoints/: untitled-checkpoint.ipynb
HAMMER/: project.c
MOC/: cbash  create_bash.c  mmoc.c  moc
Old/: MOC.py  README.md  filename.inp  mesh.py  moc.c  nine_pipe.inp  single_reservoir.py  temp.inp  temp.rpt  test  test.c  test.csv  tests
TESTS/: add.cu  define_node_id_partitions.py  grid.graph  hello.c  omp.py  tmppartition2
WATERX/: Readme.md  globals.c
conda/: meta.yaml
example_files/: BWSN.inp  BWSN1.inp  BWSN_F.inp  LoopedNet_leak_us.inp  LoopedNet_pump.inp  LoopedNet_pump2.inp  LoopedNet_valve.inp  Tnet2.inp  Tnet2_just_valves.inp  Tnet3.inp  UTnet_v2_April2016.inp  pump.inp  series_valves.inp  series_valves_corrected.inp  simple_pump.inp  simple_series_valves.inp  simple_tree.inp  simple_valve.inp  simple_valve_higher_precision.inp  simple_valve_lp.inp  toy_example.inp  tree.inp  tree_leaks.inp
fast_results/: results_close
paper_simulations/: node_pos_tnet_3.csv  plot_wave_speed_adjustment.py  run_sim.py  run_toy_example.py
parallel_moc/: constants.py  pmoc.py  results  results_close  results_far  speedup.py  temp.inp  test_moc.py
partitioning/: WS.csv  cuda_moc.py  pmoc.py  (+10 more)
(+376 files in other folders)
