[metadata]
# replace with your username:
name = ptsnet
version = 0.0.2
author = Gerardo Riano
author_email = griano@utexas.edu
description = Parallel Transient Simulation in Water Networks
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gandresr/PTSNET
project_urls =
    Bug Tracker = https://github.com/gandresr/PTSNET/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: The Unlicense (Unlicense)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src